仓管小程序接口

--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -17,3 +17,5 @@ spring:
   kafka:
     consumer:
       group-id: admin
+mybatis:
+  mapper-locations: classpath:info/batcloud/wxc/core/mapper/*.xml
