--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,12 @@
 
    <dependencies>
        <dependency>
+           <groupId>org.projectlombok</groupId>
+           <artifactId>lombok</artifactId>
+           <version>1.18.22</version>
+           <scope>provided</scope>
+       </dependency>
+       <dependency>
            <groupId>com.ctospace.archit</groupId>
            <artifactId>mybatis</artifactId>
            <version>${archit.version}</version>
