仓管后台页面接口

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>admin</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
