--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -19,3 +19,9 @@ spring:
       group-id: admin
 mybatis:
   mapper-locations: classpath:info/batcloud/wxc/core/mapper/*.xml
+
+#分页pageHelper
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
