--- a/admin/src/main/resources/bootstrap.yml
+++ b/admin/src/main/resources/bootstrap.yml
@@ -20,3 +20,8 @@ eureka:
     prefer-ip-address: true
 server:
   connection-timeout: 36000
+#分页pageHelper
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
