--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,11 @@
 
    <dependencies>
        <dependency>
+           <groupId>com.github.pagehelper</groupId>
+           <artifactId>pagehelper</artifactId>
+           <version>5.1.2</version>
+       </dependency>
+       <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
