--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.ctospace.archit</groupId>
             <artifactId>servlet</artifactId>
             <version>${archit.version}</version>
